Refactor High Scores with feedback from mentor: add defensive copy in the constructor, make getLast method compatible with older Java version, and change the formatting.